// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`XUICheckbox should be a small variant, if specified 1`] = `
<label
  className="xui-styledcheckboxradio"
  onClick={[Function]}
  role="presentation"
>
  <input
    aria-labelledby="testCheckboxId"
    className="xui-styledcheckboxradio--input xui-styledcheckboxradio--input-small"
    defaultChecked={false}
    disabled={false}
    onChange={[Function]}
    onClick={[Function]}
    required={false}
    type="checkbox"
  />
  <div
    className="xui-styledcheckboxradio--checkbox xui-styledcheckboxradio--checkbox-small"
  />
  <span
    className="xui-styledcheckboxradio--label xui-styledcheckboxradio--label-small"
    id="testCheckboxId"
  >
    Howdy, folks!
  </span>
</label>
`;

exports[`XUICheckbox should be a xsmall variant, if specified 1`] = `
<label
  className="xui-styledcheckboxradio"
  onClick={[Function]}
  role="presentation"
>
  <input
    aria-labelledby="testCheckboxId"
    className="xui-styledcheckboxradio--input xui-styledcheckboxradio--input-xsmall"
    defaultChecked={false}
    disabled={false}
    onChange={[Function]}
    onClick={[Function]}
    required={false}
    type="checkbox"
  />
  <div
    className="xui-styledcheckboxradio--checkbox xui-styledcheckboxradio--checkbox-xsmall"
  />
  <span
    className="xui-styledcheckboxradio--label xui-styledcheckboxradio--label-xsmall"
    id="testCheckboxId"
  >
    Howdy, folks!
  </span>
</label>
`;

exports[`XUICheckbox should have a hidden label, if specified 1`] = `
<label
  className="xui-styledcheckboxradio"
  onClick={[Function]}
  role="presentation"
>
  <input
    aria-label="Hidden label"
    className="xui-styledcheckboxradio--input xui-styledcheckboxradio--input-standard"
    defaultChecked={false}
    disabled={false}
    onChange={[Function]}
    onClick={[Function]}
    required={false}
    type="checkbox"
  />
  <div
    className="xui-styledcheckboxradio--checkbox xui-styledcheckboxradio--checkbox-standard"
  />
</label>
`;

exports[`XUICheckbox should have a qaHook as an automation id if provided 1`] = `
<label
  className="xui-styledcheckboxradio"
  data-automationid="test-checkbox"
  onClick={[Function]}
  role="presentation"
>
  <input
    className="xui-styledcheckboxradio--input xui-styledcheckboxradio--input-standard"
    data-automationid="test-checkbox--input"
    defaultChecked={false}
    disabled={false}
    onChange={[Function]}
    onClick={[Function]}
    required={false}
    type="checkbox"
  />
  <div
    className="xui-styledcheckboxradio--checkbox xui-styledcheckboxradio--checkbox-standard"
    data-automationid="test-checkbox--checkbox"
  />
</label>
`;

exports[`XUICheckbox should have a visible label, if specified 1`] = `
<label
  className="xui-styledcheckboxradio"
  onClick={[Function]}
  role="presentation"
>
  <input
    aria-labelledby="testCheckboxId"
    className="xui-styledcheckboxradio--input xui-styledcheckboxradio--input-standard"
    defaultChecked={false}
    disabled={false}
    onChange={[Function]}
    onClick={[Function]}
    required={false}
    type="checkbox"
  />
  <div
    className="xui-styledcheckboxradio--checkbox xui-styledcheckboxradio--checkbox-standard"
  />
  <span
    className="xui-styledcheckboxradio--label xui-styledcheckboxradio--label-standard"
    id="testCheckboxId"
  >
    Visible label
  </span>
</label>
`;

exports[`XUICheckbox should render with an icon when one is provided 1`] = `
<label
  className="xui-styledcheckboxradio"
  onClick={[Function]}
  role="presentation"
>
  <input
    className="xui-styledcheckboxradio--input xui-styledcheckboxradio--input-standard"
    defaultChecked={false}
    disabled={false}
    onChange={[Function]}
    onClick={[Function]}
    required={false}
    type="checkbox"
  />
  <div
    className="xui-iconwrapper"
  >
    <svg
      className="xui-icon"
      height={15}
      viewBox="0 0 15 15"
      width={15}
    >
      <path
        className="xui-styledcheckboxradio--focus"
        d="M7.5 12.5l-5 2.5.833-5.417L0 5.833 5 5l2.5-5L10 5l5 .833-3.333 3.75L12.5 15z"
        role="presentation"
      />
      <path
        className="xui-styledcheckboxradio--main"
        d="M7.5 12.5l-5 2.5.833-5.417L0 5.833 5 5l2.5-5L10 5l5 .833-3.333 3.75L12.5 15z"
        role="presentation"
      />
    </svg>
  </div>
</label>
`;
